--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
 url: "http://mattiaswoldu.github.io"
-baseurl: ""
+baseurl: "mattiaswoldu.io"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://mattiaswoldu.github.io/mattiaswoldu"
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Portfolio
+title: Mattias Woldu
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+#description: 
 
 # --- Navigation bar options --- #
 
