--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: "mattiaswoldu.io"
 title: Mattias Woldu
 
 # Short description of your site
-#description: 
+description: 
 
 # --- Navigation bar options --- #
 
